fix(a11y): update to meet contrast guidelines on text

--- a/src/scss/effects.scss
+++ b/src/scss/effects.scss
@@ -1,5 +1,5 @@
 .transparent-effect {
-  @apply transition-opacity duration-200 ease-in-out opacity-50;
+  @apply transition-opacity duration-200 ease-in-out opacity-75;
 }
 
 .transparent-effect:hover {
